--- a/FrontEnd/templates/index.html
+++ b/FrontEnd/templates/index.html
@@ -125,6 +125,10 @@
 
 
     }
+    .hero-bg{
+    background-size:100% !important;
+     background-size: cover !important;
+    height:90% !important;}
 }
 
 	</style>
