--- a/FrontEnd/templates/AgeEstimation.html
+++ b/FrontEnd/templates/AgeEstimation.html
@@ -46,6 +46,8 @@
         #main-content {
             background: rgb(21, 22, 51);
             background: linear-gradient(96deg, rgba(21, 22, 51, 1) 0%, rgba(226, 42, 162, 1) 86%);
+            height: 83%;
+            width: 100%;
         }
 
       
@@ -126,15 +128,14 @@
 
 .popup {
   display: none;
-  margin:10% 0%;
-  padding:10% 5%;
+  padding-top: 20%;
+  padding-bottom: 5%;
 }
 
 .popup-content {
   background-color: rgba(255, 255, 255, 0.7);
   max-width: 600px;
   margin: 0 auto 0 auto;
-  padding: 3%;
   border: 1px solid #ccc;
   border-radius: 50px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
@@ -147,16 +148,12 @@ body img{
 #formContent label {
     display: flex;
     align-items: center;
-    margin-bottom: -6%;
+    margin-bottom: -13%;
   }
 
   #formContent input[type="radio"] {
     margin-right: 5px;
-  }
-
-  #main-content{
-    height: 83%;
-    width: 100%;
+    margin-bottom: 20px;
   }
 
     </style>
@@ -220,9 +217,9 @@ body img{
                     <div id="classified" class="Popup" style="display: none;">
                         <div class="popup-content">
                             <h4 style="color: #ff069bc0;">Almost There!</h4>
-                            <span id="classification-message-span" style="font-size: 20px; font-weight: 700;"></span>
+                            <span id="classification-message-span" style="font-size: 20px; font-weight: 700; padding: 1%;"></span>
                             <div id="containerDive"></div>
-                            <h4 id="retakeHeading" style="font-size: 20px; font-weight: inherit;">Otherwise, feel free to try again! <a id="retake-button" class="boxed-btn" onclick="dis()">Retake</a> </h4>
+                            <h4 id="retakeHeading" style="font-size: 20px; font-weight: inherit; padding: 1%;">Otherwise, feel free to try again! <a id="retake-button" class="boxed-btn" onclick="dis()">Retake</a> </h4>
                         </div>
                     </div>
                 </div>
@@ -237,7 +234,7 @@ body img{
                     <!-- Error Popup -->
                     <div id="error" class="Popup" style="display: none;">
                         <div class="popup-content">
-                            <span id="error-message-span" style="font-size: 20px; font-weight: 700;"></span>
+                            <span id="error-message-span" style="font-size: 20px; font-weight: 700; padding: 1%;"></span>
                             <h4 style="font-size: 20px; font-weight: inherit;">Make sure following the instructions and feel free to try again! <a id="retake-button" class="boxed-btn" onclick="dis()">Retake</a> </h4>
                         </div>
                     </div>
@@ -328,26 +325,26 @@ body img{
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12 text-center">  
                         <!-- Password Confirm Success Pop-up (hidden by default) -->
-                        <div id="ageGroupConfirm" class="popup">
+                        <div id="ageGroupConfirm" class="popup" style="padding:8% 5%;">
                             <div class="popup-content" style="max-width: 380px">
                                 <h3 style="padding-bottom: 20px;">Set Your Age Group:</h3>
-                                <form id="ageGroupConfirmForm" action="" method="POST" style="font-size: 125%; font-weight: 700;">
+                                <form id="ageGroupConfirmForm" action="" method="POST" style="font-size: 25px; font-weight: 700;">
                                     {% csrf_token %}
                                     <div id="formContent" style="font-size: larger;">
                                         <label>
-                                            <input type="radio" name="ageGroup" value="4+">
+                                            <input type="radio" name="ageGroup" class="option-input radio" value="4+">
                                             4+</label><br>
                                         <label>  
-                                            <input type="radio" name="ageGroup" value="9+">
+                                            <input type="radio" name="ageGroup" class="option-input radio" value="9+">
                                             9+</label><br>
                                         <label>
-                                            <input type="radio" name="ageGroup" value="12+">
+                                            <input type="radio" name="ageGroup" class="option-input radio" value="12+">
                                             12+</label><br>
                                         <label>
-                                            <input type="radio" name="ageGroup" value="17+">
+                                            <input type="radio" name="ageGroup" class="option-input radio" value="17+">
                                             17+</label> <br>
                                     </div>
-                                    <button type="submit" id="setAgeGroup" style="width: 60%; font-size: 100%; font-weight: 700;" onclick="confirm()">Set Age Group</button>
+                                    <button type="submit" id="setAgeGroup" style="width: 60%; font-size: 70%; font-weight: 700;" onclick="confirm()">Set Age Group</button>
                                 </form>
                             </div>
                         </div>
@@ -361,7 +358,7 @@ body img{
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12 text-center"> 
                         <!-- Email Sent Success Popup 1 -->
-                        <div class="emailSentSuccess Popup">
+                        <div id="AssignAgeGroupLink"class="emailSentSuccess Popup">
                             <div class="popup-content">
                                 <h3>Assign age group reset Link Sent <i class="fa fa-check" aria-hidden="true" style="color: green;"></i></h3>
                                 <h5>An age group reset link has been sent to your registered email address. Please check your inbox, including your spam folder, and follow the link to reset your age group.</h5>
@@ -377,7 +374,7 @@ body img{
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12 text-center"> 
                         <!-- Email Sent Success Popup 2 -->
-                        <div class="emailSentSuccess Popup">
+                        <div id="redirectLink" class="emailSentSuccess Popup">
                             <div class="popup-content">
                                 <h3>A redirect link to your corresponding age group reset has been sent <i class="fa fa-check" aria-hidden="true" style="color: green;"></i></h3>
                                 <h5>A redirect link to your corresponding age group account has been sent to your registered email address. Please check your inbox, including your spam folder.</h5>
@@ -393,7 +390,7 @@ body img{
                 <div class="row">
                     <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 col-12 text-center"> 
                         <!-- Email Sent Success Popup 3 -->
-                        <div id="signUpConfirmation" class="emailSentSuccess Popup" style="width: 106%;">
+                        <div id="signUpConfirmation" class="emailSentSuccess Popup" style="  padding-top: 15%;">
                             <div class="popup-content">
                                 <h3>Confirm Registration <i class="fa fa-check" aria-hidden="true" style="color: green;"></i></h3>
                                 <h5>Dear gamer, we have sent you a link to your registered email to confirm your registration. Please check your inbox, including your spam folder, and follow the link to complete your registering confirmation.</h5>
@@ -739,7 +736,7 @@ xhr.setRequestHeader("X-CSRFToken", csrftoken);
 
 xhr.onload = function () {
     if (xhr.status === 200) {
-        document.getElementsByClassName('emailSentSuccess')[0].style.display = 'block';
+        document.getElementById('AssignAgeGroupLink').style.display = 'block';
         document.getElementById("instructions").style.display = "none";
         document.getElementById('send').style.display = 'none';
     } else if (xhr.status === 404) {
@@ -763,7 +760,7 @@ xhr.setRequestHeader("X-CSRFToken", csrftoken);
 
 xhr.onload = function () {
     if (xhr.status === 200) {
-        document.getElementsByClassName('emailSentSuccess')[0].style.display = 'block';
+        document.getElementById('redirectLink').style.display = 'block';
         document.getElementById("instructions").style.display = "none";
         document.getElementById('sendlogin').style.display = 'none';
     } else if (xhr.status === 404) {
