--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -732,6 +732,11 @@ padding: 2%;
 			</div>
 		</div>
 	</div>
+	<!-- end breadcrumb section -->
+	<ul class="Realbreadcrumb">
+					<li class="breadcrumb-item"><a href="{% url 'Games' %}" >All Games</a></li>
+
+				 </ul>
 
 	<!-- games -->
 	<div class="product-section mt-150 mb-150">
