--- a/FrontEnd/static/css/main.css
+++ b/FrontEnd/static/css/main.css
@@ -2730,11 +2730,12 @@ table.order-details tbody td {
 
 .Realbreadcrumb{
   display: flex;
-  justify-content: center;
+  //justify-content: center;
   align-items: center;
   position: relative;
-  left: -150px;
-  top: 84px;
+  //left: -150px;
+  //top: 84px;
+  right:2%;
 }
 
   .Realbreadcrumb .current a {
